siduxcc (0.5.8) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 31 Aug 2007 13:31:20 +0200

siduxcc (0.5.7) unstable; urgency=low

  * siduxcc_hermes: menu-entry for siduxcc_software

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 31 Aug 2007 10:32:37 +0200

siduxcc (0.5.6.12) unstable; urgency=low

  * siduxcc_hardware: ati/nvidia install added
  * siduxcc_hardware: desktop name = drivers
  * desktop-files: start with root privileges
  * ui-files: default margin = 0
  * siduxcc_software: clear list bug fixed
  * siduxcc_info: translation bug fixed
  * new kde startgui siduxcc_kmain added
  * siduxcc_network: displaydialog.ui -> networkdialog.ui
  * siduxcc_services: displaydialog.ui -> servicesdialog.ui

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 29 Aug 2007 12:16:00 +0200

siduxcc (0.5.6.11) unstable; urgency=low

  * siduxcc_kernel: kernel-remover improved
  * siduxcc_kernel: warning-window for kernel-remover added

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 24 Aug 2007 14:21:34 +0200

siduxcc (0.5.6.10) unstable; urgency=low

  * siduxcc_software: clean (apt-get) function added
  * siduxcc_software, siduxcc_hardware, siduxcc_kernel: konsole emulator
    integrated

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 22 Aug 2007 22:36:00 +0200

siduxcc (0.5.6.9) unstable; urgency=low

  * new hardware module added
  * copyright-file updated
  * siduxcc_hardware: de-translation improved  

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 17 Aug 2007 22:04:53 +0200

siduxcc (0.5.6.8) unstable; urgency=low

  * siduxcc_software: new design
  * siduxcc_software: timeout for duWarnings
  * siduxcc_network: ndiswrapper link fixed
  * siduxcc_info: de-translation fixed
  * siduxcc_kernel: timeout for kernelsearch
  * new hardware module added 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 17 Aug 2007 18:19:57 +0200

siduxcc (0.5.6.7) unstable; urgency=low

  * add Type=Application to siduxcc-hermes.desktop, "thanks to aka_sidux".
